<resources>
    <string name="app_name">calculator</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>

    <string name="add">+</string>
    <string name="subtract">−</string>
    <string name="multiply">×</string>
    <string name="divide">÷</string>
    <string name="exponent">^</string>
    <string name="parentheses">( )</string>
    <string name="parentheses_open">(</string>
    <string name="parentheses_close">)</string>
    <string name="dot">.</string>
    <string name="plus_minus">+/-</string>
    <string name="clear">C</string>
    <string name="equal">=</string>

    <string name="info">info</string>
    <string name="maker_name">Fadhilah Rizki Fatoni</string>
    <string name="maker_id">JVAN-KS05-021</string>
    <string name="created_by">Created By</string>
    
</resources>