<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black"
    >

    <EditText
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/button"
        android:backgroundTint="@color/dark_background"
        android:gravity="right|center"
        android:inputType="none"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/output"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:background="@drawable/button"
        android:backgroundTint="@color/black"
        android:layout_alignParentRight="true"
        android:inputType="none"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:layout_below="@+id/input"
        android:visibility="gone"
        android:gravity="right|center"
        />

    <TableLayout
        android:id="@+id/operator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:shrinkColumns="*"
        android:stretchColumns="*"
        >

        <TableRow android:layout_marginVertical="5dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:height="50dp"
                android:background="@drawable/button"
                android:backgroundTint="@color/black"
                android:alpha="0"
                />
            <Button
                android:id="@+id/openBtn"
                android:layout_marginHorizontal="5dp"
                android:height="50dp"
                android:layout_width="wrap_content"
                android:background="@drawable/button"
                android:backgroundTint="@color/parentheses_color"
                android:text="@string/parentheses_open"
                android:textSize="20dp"
                android:textColor="@color/white"
                />

            <Button
                android:id="@+id/closeBtn"
                android:layout_marginHorizontal="5dp"
                android:height="50dp"
                android:layout_width="wrap_content"
                android:background="@drawable/button"
                android:backgroundTint="@color/parentheses_color"
                android:text="@string/parentheses_close"
                android:textSize="20dp"
                android:textColor="@color/white"
                />

            <ImageButton
                android:id="@+id/deleteBtn"
                android:layout_marginHorizontal="5dp"
                android:height="50dp"
                android:layout_width="wrap_content"
                android:background="@drawable/button"
                android:backgroundTint="@color/light_background"
                android:src="@drawable/backspace" />


        </TableRow>

        <TableRow android:layout_marginVertical="5dp">
            <Button
                android:id="@+id/clearBtn"
                android:layout_marginHorizontal="5dp"
                android:height="50dp"
                android:layout_width="wrap_content"
                android:background="@drawable/button"
                android:backgroundTint="@color/red"
                android:text="@string/clear"
                android:textSize="20dp"
                android:textColor="@color/white"

                />
            <Button
                android:id="@+id/plusMinusBtn"
                android:layout_marginHorizontal="5dp"
                android:height="50dp"
                android:layout_width="wrap_content"
                android:background="@drawable/button"
                android:backgroundTint="@color/operator_color"
                android:text="@string/plus_minus"
                android:textSize="20dp"
                android:textColor="@color/white"
                />


            <Button
                android:id="@+id/exponentBtn"
                android:layout_marginHorizontal="5dp"
                android:background="@drawable/button"
                android:backgroundTint="@color/operator_color"
                android:height="50dp"
                android:layout_width="wrap_content"
                android:text="@string/exponent"
                android:textSize="20dp"
                android:textColor="@color/white"
                />

            <Button
                android:id="@+id/divideBtn"
                android:layout_marginHorizontal="5dp"
                android:height="50dp"
                android:layout_width="wrap_content"
                android:background="@drawable/button"
                android:backgroundTint="@color/operator_color"
                android:text="@string/divide"
                android:textSize="20dp"
                android:textColor="@color/white"
                />


        </TableRow>

        <TableRow android:layout_marginVertical="5dp">

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:height="50dp"
                android:background="@drawable/button"
                android:text="@string/seven"
                android:textSize="20dp"
                android:textColor="@color/white"
                />

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:height="50dp"
                android:background="@drawable/button"
                android:text="@string/eight"
                android:textSize="20dp"
                android:textColor="@color/white"
                />

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:height="50dp"
                android:background="@drawable/button"
                android:text="@string/nine"
                android:textSize="20dp"
                android:textColor="@color/white"
                />

            <Button
                android:id="@+id/multiplyBtn"
                android:layout_marginHorizontal="5dp"
                android:height="50dp"
                android:layout_width="wrap_content"
                android:background="@drawable/button"
                android:backgroundTint="@color/operator_color"
                android:text="@string/multiply"
                android:textSize="20dp"
                android:textColor="@color/white"
                />

        </TableRow>

        <TableRow android:layout_marginVertical="5dp">

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:height="50dp"
                android:background="@drawable/button"
                android:text="@string/four"
                android:textSize="20dp"
                android:textColor="@color/white"
                />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:height="50dp"
                android:background="@drawable/button"
                android:text="@string/five"
                android:textSize="20dp"
                android:textColor="@color/white"
                />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:height="50dp"
                android:background="@drawable/button"
                android:text="@string/six"
                android:textSize="20dp"
                android:textColor="@color/white"
                />

            <Button
                android:id="@+id/subtractBtn"
                android:layout_marginHorizontal="5dp"
                android:height="50dp"
                android:background="@drawable/button"
                android:backgroundTint="@color/operator_color"
                android:text="@string/subtract"
                android:textSize="20dp"
                android:textColor="@color/white"
                />


        </TableRow>

        <TableRow android:layout_marginVertical="5dp">


            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:height="50dp"
                android:background="@drawable/button"
                android:text="@string/one"
                android:textSize="20dp"
                android:textColor="@color/white"
                />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:height="50dp"
                android:background="@drawable/button"
                android:text="@string/two"
                android:textSize="20dp"
                android:textColor="@color/white"
                />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:height="50dp"
                android:background="@drawable/button"
                android:text="@string/three"
                android:textSize="20dp"
                android:textColor="@color/white"
                />

            <Button
                android:id="@+id/addBtn"
                android:layout_marginHorizontal="5dp"
                android:height="50dp"
                android:background="@drawable/button"
                android:backgroundTint="@color/operator_color"
                android:text="@string/add"
                android:textSize="20dp"
                android:textColor="@color/white"
                />

        </TableRow>

        <TableRow android:layout_marginVertical="5dp">

            <Button
                android:id="@+id/dotBtn"
                android:layout_width="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:height="50dp"
                android:background="@drawable/button"
                android:text="@string/dot"
                android:textSize="20dp"
                android:textColor="@color/white"
                />

            <Button
                android:id="@+id/button0"
                android:layout_width="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:height="50dp"
                android:background="@drawable/button"
                android:text="@string/zero"
                android:textSize="20dp"
                android:textColor="@color/white"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:height="50dp"
                android:background="@drawable/button"
                android:backgroundTint="@color/black"
                android:alpha="0"
                />

            <Button
                android:id="@+id/equalBtn"
                android:layout_width="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:height="50dp"
                android:background="@drawable/button"
                android:backgroundTint="@color/green"
                android:text="@string/equal"
                android:textSize="20dp"
                android:textColor="@color/white"
                />


        </TableRow>
    </TableLayout>
</RelativeLayout>